--- a/kalibr_melodic/Dockerfile
+++ b/kalibr_melodic/Dockerfile
@@ -1,8 +1,9 @@
-# syntax=docker/dockerfile:1
 FROM ros:melodic-ros-base-bionic
 
 # apt with domestic mirror
-RUN sudo sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+RUN sed -i 's/archive.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list && \
+    sed -i 's/ports.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list
+
 
 # kalibr apt dependencies
 RUN apt update && apt install -y \
@@ -11,13 +12,14 @@ RUN apt update && apt install -y \
     ros-melodic-vision-opencv ros-melodic-image-transport-plugins ros-melodic-cmake-modules \
     software-properties-common libpoco-dev python-matplotlib python-scipy \
     python-git python-pip ipython libtbb-dev libblas-dev liblapack-dev python-catkin-tools libv4l-dev \
-    # python-igraph
-    libtool autoconf byacc \
+    # python-igraph depenpencies for pip install
+    # libtool autoconf byacc python-cairo \
+    python-igraph python-cairo \
     # kalibr build required
     wget
 
-# kalibr pip dependencie
-RUN python -m pip install --upgrade --force pip && pip install python-igraph==0.8.3
+# kalibr pip dependencie listed in doc, alternative for apt python-igraph
+# RUN python -m pip install --upgrade --force pip && pip install python-igraph==0.8.3
 
 # setup workspace
 WORKDIR /workspace
@@ -29,11 +31,11 @@ RUN mkdir src && source /opt/ros/melodic/setup.bash && \
     catkin config --merge-devel && \
     catkin config --cmake-args -DCMAKE_BUILD_TYPE=Release
 
-# download and build
+# download
 RUN cd src && git clone https://github.com/ethz-asl/Kalibr.git
-
-# patch kalibr
-RUN sed -i 's/import ImageFile/from PIL import ImageFile/g' src/Kalibr/aslam_offline_calibration/kalibr/python/kalibr_bagcreater
+# patch
+RUN cd src/Kalibr && git checkout 445b9463abbfdc90498193c5fa20b20be70c036d && \
+    sed -i 's/import ImageFile/from PIL import ImageFile/g' aslam_offline_calibration/kalibr/python/kalibr_bagcreater
 
 # copied from kalibr wiki, but Release build arg is redundant here as already configured before
 RUN catkin build -DCMAKE_BUILD_TYPE=Release -j4 && source devel/setup.bash
